add user project management apis
